Fix visibility transition for panel-submit & panel-artist)

--- a/app/assets/scss/components/_submit-artist-panel.scss
+++ b/app/assets/scss/components/_submit-artist-panel.scss
@@ -4,7 +4,7 @@
 .submit-artist-panel {
   visibility: hidden;
   position: absolute;
-  transition: visibility 0s, transform .2s ease;
+  transition: visibility .2s, transform .2s ease;
   bottom: 0;
   right: 0;
 
