--- a/app/assets/scss/pages/_atlas.scss
+++ b/app/assets/scss/pages/_atlas.scss
@@ -218,7 +218,7 @@
 .artist-panel {
   visibility: hidden;
   position: absolute;
-  transition: visibility 0s, transform .2s ease;
+  transition: visibility .2s, transform .2s ease;
   bottom: 0;
   right: 0;
 
